@@ -3,11 +3,15 @@ package org.example.backend.models;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import jakarta.persistence.*;
 import jakarta.validation.constraints.Email;
+import jakarta.validation.constraints.NotBlank;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import com.fasterxml.jackson.annotation.JsonManagedReference;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.ArrayList;
+import java.util.List;
 
 @Entity
 @Table(name = "users")
@@ -19,16 +23,25 @@ public class User {
     private Long id;
 
     @JsonProperty("email") // Wymusza odpowiednią nazwę w JSON
-    @Email(message = "email should be valid")
+    @NotBlank(message = "Email is required")
+    @Email(message = "Please provide a valid email address")
     @Column(nullable = false, unique = true, length = 60)
     private String email;
 
     @JsonProperty(access = JsonProperty.Access.WRITE_ONLY)
+    @NotBlank(message = "Password is required")
     @Column(nullable = false, length = 100)
     private String password;
 
     @Column(nullable = false)
-    private boolean role;
+    private boolean role = false; // false = USER, true = ADMIN
+
+    @Column(name = "is_active", nullable = false)
+    private boolean active = true;
+
+    @OneToMany(mappedBy = "user")
+    @JsonManagedReference
+    private List<Reservation> reservations = new ArrayList<>();
 
     public User() {
     }
@@ -40,9 +53,17 @@ public class User {
     }
 
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.singletonList(
-                new SimpleGrantedAuthority("ROLE_" + (this.role ? "ADMIN" : "USER"))
-        );
+        if (this.role) {
+            return List.of(
+                new SimpleGrantedAuthority("ADMIN"),
+                new SimpleGrantedAuthority("ROLE_ADMIN")
+            );
+        } else {
+            return List.of(
+                new SimpleGrantedAuthority("USER"),
+                new SimpleGrantedAuthority("ROLE_USER")
+            );
+        }
     }
 
     // Custom getter for role to make it more readable
@@ -77,6 +98,14 @@ public class User {
 
     public void setRole(boolean role) {
         this.role = role;
+    }
+
+    public boolean isActive() {
+        return active;
+    }
+
+    public void setActive(boolean active) {
+        this.active = active;
     }
 
 
